name:                flip-plus
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Maxwell Swadling
maintainer:          maxwellswadling@gmail.com
-- copyright:           
category:            Control
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Control.FlipPlus
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7
  -- hs-source-dirs:      
  default-language:    Haskell2010